Refresh site copy for coaching pages

--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
                 <div class="row align-items-center">
                     <div class="col-lg-7 mb-4 mb-lg-0">
                         <h1 class="mb-3">A space to think.</h1>
-                        <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
-                        <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about receiving answers; it’s about reconnecting with yourself — uncovering what’s already within you.</p>
+                        <p class="mb-3">At Noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
+                        <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
                         <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
                         <div class="d-flex flex-wrap align-items-center">
-                            <a class="btn accent-btn mr-3 mb-2" href="lets-talk.html">Explore coaching</a>
-                            <a class="btn btn-outline-dark mb-2" href="get-to-know-me.html">Get to know Alex</a>
+                            <a class="btn accent-btn mr-3 mb-2" href="get-to-know-me.html">Explore coaching</a>
+                            <a class="btn btn-outline-dark mb-2" href="lets-talk.html">Let’s talk</a>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -113,8 +113,8 @@
                     <div class="col-lg-6">
                         <div class="content-card h-100">
                             <h3 class="mb-3">A calm space for honest conversation.</h3>
-                            <p class="mb-3">At Noein, you’re invited to slow down and reconnect with yourself. It’s a place to notice what’s happening inside, understand the choices you’ve made, and remember where you want your choices to take you.</p>
-                            <p class="mb-3">Coaching here is not about supplying answers. It’s about helping you uncover the clarity, confidence, and direction that are already within you.</p>
+                            <p class="mb-3">You’re invited to slow down and reconnect with yourself. Noein is a place to notice what’s happening inside, understand the choices you’ve made, and remember where you want those choices to take you.</p>
+                            <p class="mb-3">Coaching here is not about supplying quick fixes. It’s about helping you uncover the clarity, confidence, and direction that are already within you.</p>
                             <p class="mb-0">— A space to think. A space to understand. A space to become.</p>
                         </div>
                     </div>
@@ -140,19 +140,19 @@
                     <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
                         <div class="content-card h-100">
                             <h3 class="mb-3">Why Noein.</h3>
-                            <p class="mb-3">Noein comes from the ancient Greek word νοεῖν: to perceive with the mind. It speaks to the inner clarity that appears when thinking turns into insight.</p>
-                            <p class="mb-3">This practice was born from Alex’s own experience of choosing a path that honoured her values. It’s a calm place to reflect, reconnect, and act with intention.</p>
-                            <p class="mb-0"><strong>Architect, Transformative Coach.</strong> Practical structure meets thoughtful exploration to help you see what’s true and move forward with confidence.</p>
+                            <p class="mb-3">Noein comes from the ancient Greek word νοεῖν — to perceive with the mind. It points to the inner clarity that appears when thinking settles and insight becomes visible.</p>
+                            <p class="mb-3">This practice grew from Alexandra’s own experience of choosing a path that honoured her values. Noein is a calm space to reflect, reconnect, and act with intention.</p>
+                            <p class="mb-0"><strong>Architect and Transformative Coach</strong> – practical structure meets thoughtful exploration, to help you see what’s true and move forward with confidence.</p>
                         </div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
                         <div class="content-card h-100">
-                            <h4 class="mb-3">Who we support</h4>
+                            <h4 class="mb-3">Who this space is for</h4>
                             <ul class="list-checks mb-0">
-                                <li>Individuals who feel a pull toward something more aligned.</li>
-                                <li>People ready to reconnect with themselves and gain direction.</li>
-                                <li>Professionals seeking clarity, intention, and confidence in their choices.</li>
-                                <li>Those who value gentle, grounded guidance.</li>
+                                <li>Sensing a pull toward something more aligned in life or work.</li>
+                                <li>Wanting more clarity about your direction or next steps.</li>
+                                <li>Ready to reconnect with your values and what feels true for you.</li>
+                                <li>Looking for gentle, grounded support rather than pressure or quick fixes.</li>
                             </ul>
                         </div>
                     </div>
@@ -177,28 +177,21 @@
                                 <div class="testimonial-carousel-card">
                                     <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
                                     <div>
-                                        <p class="mb-3">“Working with Alex was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
+                                        <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences. Through her guidance, I gained deeper self-awareness, a clearer understanding of my strengths, and a fresh perspective on my professional environment.”</p>
                                         <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
                                     <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
                                     <div>
-                                        <p class="mb-3">“Alex was considerate and thought provoking throughout the coaching. She had a considered yet straightforward approach.”</p>
+                                        <p class="mb-3">“Alexandra was considerate and thought-provoking throughout the coaching. She had a considered yet straightforward approach.”</p>
                                         <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
                                     <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
                                     <div>
-                                        <p class="mb-3">“It's been great working with Alex. Her calm, empathic approach created a trusting environment and her active listening skills made me feel heard.”</p>
-                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
-                                    </div>
-                                </div>
-                                <div class="testimonial-carousel-card">
-                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
-                                    <div>
-                                        <p class="mb-3">“Through her guidance, I gained deeper self-awareness, a clearer understanding of my strengths, and a fresh perspective on my professional environment.”</p>
+                                        <p class="mb-3">“It’s been great working with Alexandra. Her calm, empathic approach created a trusting environment and her active listening skills made me feel heard.”</p>
                                         <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
                                     </div>
                                 </div>
@@ -227,9 +220,9 @@
             <div class="container">
                 <div class="content-card text-center">
                     <h3 class="mb-3">If Noein feels like the right space, let’s begin with a short conversation.</h3>
-                    <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.</p>
-                    <a class="btn accent-btn mr-3 mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
-                    <a class="btn btn-outline-dark mb-2" href="lets-talk.html">Explore coaching options</a>
+                    <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online, mainly evenings and weekends, with clients worldwide.</p>
+                    <a class="btn accent-btn mr-3 mb-2" href="lets-talk.html">Explore coaching</a>
+                    <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                 </div>
             </div>
         </section>
