--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -71,13 +71,13 @@
             <div class="container">
                 <div class="row align-items-center col-spacing-30">
                     <div class="col-lg-6 mb-4 mb-lg-0">
-                        <h1 class="mb-3">Meet Alexandra.</h1>
-                        <p class="mb-3">I’m Alexandra — a Transformative Coach, and the founder of Noein.</p>
-                        <p class="mb-3">My journey into coaching began while expanding my own career. As I grew in architecture, I realised the skills I loved most were the human ones: listening, guiding, helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, hence trained as a Transformative Coach with the Animas Centre for Coaching.</p>
+                        <h1 class="mb-3">Get to know me.</h1>
+                        <p class="mb-3">I’m Alexandra — an Architect and Transformative Coach, and the founder of Noein.</p>
+                        <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills I loved most were the human ones: listening, guiding, and helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, and I trained as a Transformative Coach with the Animas Centre for Coaching.</p>
                         <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p>
                         <p class="mb-4">A space to think. A space to understand. A space to become.</p>
                         <div class="d-flex flex-wrap align-items-center">
-                            <a class="btn accent-btn mr-3 mb-2" href="lets-talk.html">Book a discovery call</a>
+                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
                             <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Say hello</a>
                         </div>
                     </div>
@@ -95,16 +95,24 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">My philosophy</h3>
-                            <p class="mb-3">Life is often influenced by factors we don’t fully notice. In our busy, demanding, and sometimes stressful lives, it’s easy to lose sight of what truly matters, and we can end up living a life that doesn’t fully reflect our dreams or values.</p>
-                            <p class="mb-0">Coaching helps us pause, notice the choices we’ve actually made, and understand the reasons behind them. It also helps us reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.</p>
+                            <h3 class="mb-3">Who I work with</h3>
+                            <p class="mb-3">I work with adults from a wide range of backgrounds — professionals, creatives, people in demanding roles, and those navigating personal transitions.</p>
+                            <p class="mb-0">You don’t need a perfectly shaped goal to begin. Many clients arrive with a sense that something isn’t quite right, or that something needs to shift, even if it’s hard to put into words.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">My coaching style</h3>
-                            <p class="mb-3">My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions, and what naturally arises in the space we create together.</p>
-                            <p class="mb-0">When we understand the thoughts, patterns, and assumptions shaping our lives, we begin to act with greater clarity and intention.</p>
+                            <h3 class="mb-3">What coaching can help with</h3>
+                            <p class="mb-3">Coaching can support you in many different areas of life and work. Some themes that often show up in sessions include:</p>
+                            <ul class="list-checks mb-0">
+                                <li>Gaining clarity on your direction or next steps.</li>
+                                <li>Exploring a sense of feeling stuck or off-track.</li>
+                                <li>Reconnecting with your values and what truly matters to you.</li>
+                                <li>Building confidence in your own judgement and choices.</li>
+                                <li>Navigating change or transition (career, life stage, or personal).</li>
+                                <li>Understanding unhelpful patterns in thinking or behaviour.</li>
+                                <li>Creating more ease, calm, and alignment in your daily life.</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -116,21 +124,23 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">My qualifications</h3>
-                            <ul class="list-checks mb-0">
-                                <li>Accredited Diploma in Transformative Coaching</li>
-                                <li>RIBA Professional practice Qualification (Part 3)</li>
-                                <li>Pg Diploma in Architecture (Part 2)</li>
-                                <li>BA (Hons) Degree in Architecture (Part 1)</li>
+                            <h3 class="mb-3">How our sessions work</h3>
+                            <ul class="list-checks mb-4">
+                                <li>Format – One-to-one coaching.</li>
+                                <li>Session length – 60 minutes.</li>
+                                <li>Location – Online.</li>
+                                <li>Availability – Mostly evenings and weekends.</li>
+                                <li>Where I’m based – London, UK (GMT/BST), working with clients worldwide online.</li>
+                                <li>Fees – Session pricing starts from £[insert starting fee].</li>
                             </ul>
+                            <p class="mb-0">We begin with a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other, explore what you’d like to work on, and see whether this approach feels right for you.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">What people say</h3>
-                            <p class="mb-3">“Working with Alex has been a helpful experience. Her support and attentiveness have helped me gain new perspectives and make some progress towards my goal.”</p>
-                            <p class="mb-3">“Working with Alex was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
-                            <p class="mb-0"><strong>Name withheld &amp; V.H.</strong></p>
+                            <h3 class="mb-3">My philosophy</h3>
+                            <p class="mb-3">Life is often influenced by factors we don’t fully notice. In our busy, demanding, and sometimes stressful lives, it’s easy to lose sight of what truly matters and to find ourselves living in ways that don’t fully reflect our dreams or values.</p>
+                            <p class="mb-0">Coaching helps us pause, notice the choices we’ve made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.</p>
                         </div>
                     </div>
                 </div>
@@ -139,11 +149,48 @@
 
         <section class="section-spacer">
             <div class="container">
-                <div class="content-card text-center">
-                    <h3 class="mb-3">Curious about working together?</h3>
-                    <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
-                    <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                    <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
+                <div class="row col-spacing-30 align-items-start">
+                    <div class="col-lg-6">
+                        <div class="content-card h-100">
+                            <h3 class="mb-3">My coaching style</h3>
+                            <p class="mb-3">My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions, and what naturally arises in the space we create together.</p>
+                            <p class="mb-0">When we understand the thoughts, patterns, and assumptions shaping our lives, we begin to act with greater clarity and intention.</p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="content-card h-100">
+                            <h3 class="mb-3">My qualifications</h3>
+                            <ul class="list-checks mb-0">
+                                <li>Accredited Diploma in Transformative Coaching</li>
+                                <li>RIBA Professional Practice Qualification (Part 3)</li>
+                                <li>Pg Diploma in Architecture (Part 2)</li>
+                                <li>BA (Hons) Degree in Architecture (Part 1)</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section class="section-spacer">
+            <div class="container">
+                <div class="row col-spacing-30 align-items-start">
+                    <div class="col-lg-6">
+                        <div class="content-card h-100">
+                            <h3 class="mb-3">Client experiences</h3>
+                            <p class="mb-3">“Working with Alexandra has been a helpful experience. Her support and attentiveness have helped me gain new perspectives and make progress towards my goal.”</p>
+                            <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
+                            <p class="mb-0"><strong>Names withheld / V.H., London, UK</strong></p>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="content-card h-100">
+                            <h3 class="mb-3">Curious about working together?</h3>
+                            <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
+                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
+                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
