--- a/lets-talk.html
+++ b/lets-talk.html
@@ -71,13 +71,13 @@
             <div class="container">
                 <div class="row align-items-center col-spacing-30">
                     <div class="col-lg-7 mb-4 mb-lg-0">
-                        <h1 class="mb-3">Let’s chat.</h1>
-                        <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online (via Teams), creating a calm and supportive space for you to reflect, and explore what matters most.</p>
-                        <p class="mb-3">If you’re curious about how coaching could support you, I invite you to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
-                        <p class="mb-4">Payment and scheduling details are shared once you’re ready to begin. I offer sessions mostly in the evenings and on weekends.</p>
+                        <h1 class="mb-3">Let’s talk.</h1>
+                        <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online, creating a calm and supportive space for you to reflect and explore what matters most.</p>
+                        <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
+                        <p class="mb-4">Payment and scheduling details are shared once you’re ready to begin. I offer sessions mostly in the evenings and at weekends.</p>
                         <div class="d-flex flex-wrap align-items-center">
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Email Alex</a>
+                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Email Alexandra</a>
                         </div>
                     </div>
                     <div class="col-lg-5">
@@ -109,7 +109,7 @@
                         <div class="content-card h-100">
                             <h3 class="mb-3">Contact me</h3>
                             <p class="mb-3">I’d love to hear from you. Whether you’re curious about coaching, have a question, or want to book an introductory call, please reach out.</p>
-                            <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.</p>
+                            <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.<br>I work with clients worldwide online.</p>
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Schedule on Calendly</a>
                             <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                         </div>
