--- a/index.html
+++ b/index.html
@@ -69,22 +69,10 @@
     <main class="flex-fill">
         <section class="section-spacer section-hero-intro">
             <div class="container">
-                <div class="content-card hero-tagline-box mb-5">
-                    <div class="row align-items-center">
-                        <div class="col-lg-7 mb-4 mb-lg-0 hero-tagline-copy">
-                            <p class="hero-tagline-line mb-2">Coaching to help you <span class="tagline-highlight">see clearly</span>,</p>
-                            <p class="hero-tagline-line mb-2">reconnect with <span class="tagline-highlight">your truth</span>,</p>
-                            <p class="hero-tagline-line mb-0">and move forward <span class="tagline-highlight">with intention</span>.</p>
-                        </div>
-                        <div class="col-lg-5 text-lg-right">
-                            <img src="assets/images/clear-thinking@2x.png" alt="Illustration of scribble becoming a clear brain" class="hero-tagline-image img-fluid">
-                        </div>
-                    </div>
-                </div>
                 <div class="row align-items-center">
                     <div class="col-lg-7 mb-4 mb-lg-0">
                         <h1 class="mb-3">A space to think.</h1>
-                        <p class="mb-3">At Noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
+                        <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
                         <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
                         <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
                         <div class="d-flex flex-wrap align-items-center">
@@ -113,9 +101,9 @@
                     <div class="col-lg-6">
                         <div class="content-card h-100">
                             <h3 class="mb-3">A calm space for honest conversation.</h3>
-                            <p class="mb-3">You’re invited to slow down and reconnect with yourself. Noein is a place to notice what’s happening inside, understand the choices you’ve made, and remember where you want those choices to take you.</p>
+                            <p class="mb-3">You’re invited to slow down and reconnect with yourself; this is a place to notice what’s happening inside, understand the choices you’ve made, and remember where you want those choices to take you.</p>
                             <p class="mb-3">Coaching here is not about supplying quick fixes. It’s about helping you uncover the clarity, confidence, and direction that are already within you.</p>
-                            <p class="mb-0">— A space to think. A space to understand. A space to become.</p>
+                            <h6 class="mb-0">A space to think, to understand, to become.</h6>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -175,38 +163,38 @@
                         <div class="col-12">
                             <div class="owl-carousel testimonial-carousel" id="testimonialCarousel" data-owl-items="2" data-owl-xs="1" data-owl-sm="1" data-owl-md="2" data-owl-lg="2" data-owl-margin="24" data-owl-dots="true" data-owl-nav="false" data-owl-loop="true" data-owl-autoplay="true" data-owl-autoplayTimeout="6000">
                                 <div class="testimonial-carousel-card">
-                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <!-- div class="testimonial-headshot-placeholder" aria-hidden="true"></div -->
                                     <div>
                                         <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences. Through her guidance, I gained deeper self-awareness, a clearer understanding of my strengths, and a fresh perspective on my professional environment.”</p>
-                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                        <p class="mb-0 text-primary"><strong>London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
-                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <!-- div class="testimonial-headshot-placeholder" aria-hidden="true"></div -->
                                     <div>
                                         <p class="mb-3">“Alexandra was considerate and thought-provoking throughout the coaching. She had a considered yet straightforward approach.”</p>
-                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                        <p class="mb-0 text-primary"><strong>London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
-                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <!-- div class="testimonial-headshot-placeholder" aria-hidden="true"></div -->
                                     <div>
                                         <p class="mb-3">“It’s been great working with Alexandra. Her calm, empathic approach created a trusting environment and her active listening skills made me feel heard.”</p>
-                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                        <p class="mb-0 text-primary"><strong>London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
-                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <!-- div class="testimonial-headshot-placeholder" aria-hidden="true"></div -->
                                     <div>
                                         <p class="mb-3">“These sessions help you realise you have all the tools and answers to achieve what you want in certain aspects of your life.”</p>
-                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                        <p class="mb-0 text-primary"><strong>London, UK</strong></p>
                                     </div>
                                 </div>
                                 <div class="testimonial-carousel-card">
-                                    <div class="testimonial-headshot-placeholder" aria-hidden="true"></div>
+                                    <!-- div class="testimonial-headshot-placeholder" aria-hidden="true"></div -->
                                     <div>
                                         <p class="mb-3">“I have learnt so much about myself during our sessions and I would highly recommend them for anyone who is questioning their direction in life.”</p>
-                                        <p class="mb-0 text-primary"><strong>Private client, London, UK</strong></p>
+                                        <p class="mb-0 text-primary"><strong>London, UK</strong></p>
                                     </div>
                                 </div>
                             </div>
