--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -74,9 +74,9 @@
                         <h1 class="mb-3">Get to know me.</h1>
                         <p class="mb-3">I’m Alexandra — an Architect and Transformative Coach, and the founder of Noein.</p>
                         <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills I loved most were the human ones: listening, guiding, and helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, and I trained as a Transformative Coach with the Animas Centre for Coaching.</p>
-                        <p class="mb-3">Noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p>
-                        <p class="mb-4">A space to think. A space to understand. A space to become.</p>
-                        <div class="d-flex flex-wrap align-items-center">
+                        <p class="mb-3">noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p>
+                        <h6 class="mb-0">A space to think, to understand, to become.</h6>
+                          <div class="d-flex flex-wrap align-items-center">
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
                             <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Say hello</a>
                         </div>
@@ -180,8 +180,7 @@
                             <h3 class="mb-3">Client experiences</h3>
                             <p class="mb-3">“Working with Alexandra has been a helpful experience. Her support and attentiveness have helped me gain new perspectives and make progress towards my goal.”</p>
                             <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
-                            <p class="mb-0"><strong>Names withheld / V.H., London, UK</strong></p>
-                        </div>
+                </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="content-card h-100">
