--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <section class="section-spacer">
             <div class="container">
                 <div class="content-card text-center">
-                    <h3 class="mb-3">If Noein feels like the right space, let’s begin with a short conversation.</h3>
+                    <h3 class="mb-3">If noein feels like the right space, let’s begin with a short conversation.</h3>
                     <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online, mainly evenings and weekends, with clients worldwide.</p>
                     <a class="btn accent-btn mr-3 mb-2" href="lets-talk.html">Explore coaching</a>
                     <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
