Refine layout spacing and typography

--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -82,7 +82,7 @@
                         </div>
                     </div>
                     <div class="col-lg-6 text-center">
-                        <div class="content-card p-4">
+                        <div class="headshot-card">
                             <img src="assets/images/alex-avatar-photo-colour@2x.png" alt="Portrait of Alex" class="img-fluid rounded">
                         </div>
                     </div>
@@ -203,13 +203,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4 text-center text-md-left">
-                        <h5 class="heading-uppercase font-family-roboto grey-font-color mb-0"><b>
-                            &copy;
-                            <span id="copyright">
-                                <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
-                            </span>
-                            noein
-                        </b></h5>
+                        <h5 class="heading-uppercase font-family-roboto grey-font-color mb-0"><b>&copy; 2025 noein</b></h5>
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <ul class="list-horizontal-unstyled mb-0"></ul>
