--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <section class="section-spacer">
             <div class="container">
-                <div class="row align-items-center col-spacing-30">
+                <div class="row align-items-stretch col-spacing-30 equal-height-row">
                     <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
                         <div class="content-card h-100">
                             <h3 class="mb-3">Why Noein.</h3>
@@ -224,13 +224,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4 text-center text-md-left">
-                        <h5 class="heading-uppercase font-family-roboto grey-font-color mb-0"><b>
-                            &copy;
-                            <span id="copyright">
-                                <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
-                            </span>
-                            noein
-                        </b></h5>
+                        <h5 class="heading-uppercase font-family-roboto grey-font-color mb-0"><b>&copy; 2025 noein</b></h5>
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <ul class="list-horizontal-unstyled mb-0"></ul>
