--- a/lets-talk.html
+++ b/lets-talk.html
@@ -69,7 +69,7 @@
     <main class="flex-fill">
         <section class="section-spacer">
             <div class="container">
-                <div class="row align-items-center col-spacing-30">
+                <div class="row align-items-stretch col-spacing-30 equal-height-row">
                     <div class="col-lg-7 mb-4 mb-lg-0">
                         <h1 class="mb-3">Let’s talk.</h1>
                         <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online, creating a calm and supportive space for you to reflect and explore what matters most.</p>
@@ -127,13 +127,7 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4 text-center text-md-left">
-                        <h5 class="heading-uppercase font-family-roboto grey-font-color mb-0"><b>
-                            &copy;
-                            <span id="copyright">
-                                <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
-                            </span>
-                            noein
-                        </b></h5>
+                        <h5 class="heading-uppercase font-family-roboto grey-font-color mb-0"><b>&copy; 2025 noein</b></h5>
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <ul class="list-horizontal-unstyled mb-0"></ul>
