--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -72,16 +72,16 @@
                 <div class="row align-items-center col-spacing-30">
                     <div class="col-lg-6 mb-4 mb-lg-0">
                         <h1 class="mb-3">Get to know me.</h1>
-                        <p class="mb-3">I’m Alexandra — an Architect and Transformative Coach, and the founder of Noein.</p>
+                        <p class="mb-3">I’m Alexandra — a Transformative Coach, Architect, and the founder of noein.</p>
                         <p class="mb-3">My journey into coaching began while expanding my own career in architecture. As I grew in that world, I realised the skills I loved most were the human ones: listening, guiding, and helping others make sense of their thoughts. Over time, this became more than an interest — it became a natural path forward, and I trained as a Transformative Coach with the Animas Centre for Coaching.</p>
-                        <p class="mb-3">noein is the space I once needed myself: a calm place to think, reflect, and reconnect with what feels true.</p>
-                        <h6 class="mb-0">A space to think, to understand, to become.</h6>
-                          <div class="d-flex flex-wrap align-items-center">
+                        <p class="mb-3">I have created the space that I once needed myself; a calm place to think, reflect, and reconnect with what feels true.</p>
+
+                          <div class="d-flex flex-wrap align-items-center" style="padding-top: 10px;">
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
                             <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Say hello</a>
                         </div>
                     </div>
-                    <div class="col-lg-6 text-center">
+                    <div class="col-lg-6 text-center" style="padding-top: 50px;">
                         <div class="headshot-card">
                             <img src="assets/images/alex-avatar-photo-colour@2x.png" alt="Portrait of Alex" class="img-fluid rounded">
                         </div>
@@ -130,8 +130,7 @@
                                 <li>Session length – 60 minutes.</li>
                                 <li>Location – Online.</li>
                                 <li>Availability – Mostly evenings and weekends.</li>
-                                <li>Where I’m based – London, UK (GMT/BST), working with clients worldwide online.</li>
-                                <li>Fees – Session pricing starts from £[insert starting fee].</li>
+                                <li>Where I’m based – London, UK, working with clients worldwide online.</li>
                             </ul>
                             <p class="mb-0">We begin with a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other, explore what you’d like to work on, and see whether this approach feels right for you.</p>
                         </div>
@@ -162,9 +161,9 @@
                             <h3 class="mb-3">My qualifications</h3>
                             <ul class="list-checks mb-0">
                                 <li>Accredited Diploma in Transformative Coaching</li>
-                                <li>RIBA Professional Practice Qualification (Part 3)</li>
-                                <li>Pg Diploma in Architecture (Part 2)</li>
                                 <li>BA (Hons) Degree in Architecture (Part 1)</li>
+                                <li>Pg Diploma in Architecture (Part 2)</li>
+                                <li>RIBA Professional Practice Qualification (Part 3)</li>
                             </ul>
                         </div>
                     </div>
@@ -186,8 +185,9 @@
                         <div class="content-card h-100">
                             <h3 class="mb-3">Curious about working together?</h3>
                             <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
+</br>
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
+                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                         </div>
                     </div>
                 </div>
@@ -203,7 +203,13 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4 text-center text-md-left">
-                        <h5 class="heading-uppercase font-family-roboto grey-font-color mb-0"><b>&copy; 2025 noein</b></h5>
+                      <h5 class="heading-uppercase font-family-roboto grey-font-color"><b>
+  &copy;
+    <span id="copyright">
+        <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+    </span>
+    noein
+  </b></h5>
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <ul class="list-horizontal-unstyled mb-0"></ul>
