--- a/lets-talk.html
+++ b/lets-talk.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="Explore coaching with Noein — pricing, sessions, and how to book.">
+    <meta name="description" content="Explore coaching with noein — pricing, sessions, and how to book.">
     <meta name="keywords" content="coaching, discovery call, pricing, contact, Noein">
     <title>noein | let’s talk</title>
     <!-- Favicon -->
@@ -111,7 +111,7 @@
                             <p class="mb-3">I’d love to hear from you. Whether you’re curious about coaching, have a question, or want to book an introductory call, please reach out.</p>
                             <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.<br>I work with clients worldwide online.</p>
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Schedule on Calendly</a>
-                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
+                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                         </div>
                     </div>
                 </div>
@@ -127,7 +127,13 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4 text-center text-md-left">
-                        <h5 class="heading-uppercase font-family-roboto grey-font-color mb-0"><b>&copy; 2025 noein</b></h5>
+                      <h5 class="heading-uppercase font-family-roboto grey-font-color"><b>
+  &copy;
+    <span id="copyright">
+        <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+    </span>
+    noein
+  </b></h5>
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <ul class="list-horizontal-unstyled mb-0"></ul>
