--- a/index.html
+++ b/index.html
@@ -103,7 +103,6 @@
                             <h3 class="mb-3">A calm space for honest conversation.</h3>
                             <p class="mb-3">You’re invited to slow down and reconnect with yourself; this is a place to notice what’s happening inside, understand the choices you’ve made, and remember where you want those choices to take you.</p>
                             <p class="mb-3">Coaching here is not about supplying quick fixes. It’s about helping you uncover the clarity, confidence, and direction that are already within you.</p>
-                            <h6 class="mb-0">A space to think, to understand, to become.</h6>
                         </div>
                     </div>
                     <div class="col-lg-6">
@@ -124,13 +123,25 @@
 
         <section class="section-spacer">
             <div class="container">
+                <div class="row col-spacing-30 align-items-start">
+                  <div class="col-lg-12">
+                      <div class="content-card h-100">
+                        <h2 class="mb-0 text-center">A space to think, to understand, to become.</h2>
+                      </div>
+                  </div>
+        </div>
+      </div>
+</section>
+
+        <section class="section-spacer">
+            <div class="container">
                 <div class="row align-items-stretch col-spacing-30 equal-height-row">
                     <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">Why Noein.</h3>
-                            <p class="mb-3">Noein comes from the ancient Greek word νοεῖν — to perceive with the mind. It points to the inner clarity that appears when thinking settles and insight becomes visible.</p>
+                            <h3 class="mb-3">Why noein?</h3>
+                            <p class="mb-3">The name is derived from the ancient Greek word νοεῖν — to perceive with the mind. It points to the inner clarity that appears when thinking settles and insight becomes visible.</p>
                             <p class="mb-3">This practice grew from Alexandra’s own experience of choosing a path that honoured her values. Noein is a calm space to reflect, reconnect, and act with intention.</p>
-                            <p class="mb-0"><strong>Architect and Transformative Coach</strong> – practical structure meets thoughtful exploration, to help you see what’s true and move forward with confidence.</p>
+                            <p class="mb-0"><strong>Transformative Coach and Architect</strong> – practical structure meets thoughtful exploration, to help you see what’s true and move forward with confidence.</p>
                         </div>
                     </div>
                     <div class="col-lg-6 order-lg-1">
@@ -208,7 +219,7 @@
             <div class="container">
                 <div class="content-card text-center">
                     <h3 class="mb-3">If noein feels like the right space, let’s begin with a short conversation.</h3>
-                    <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online, mainly evenings and weekends, with clients worldwide.</p>
+                  </br>
                     <a class="btn accent-btn mr-3 mb-2" href="lets-talk.html">Explore coaching</a>
                     <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                 </div>
@@ -224,7 +235,13 @@
             <div class="container">
                 <div class="row align-items-center">
                     <div class="col-12 col-md-4 text-center text-md-left">
-                        <h5 class="heading-uppercase font-family-roboto grey-font-color mb-0"><b>&copy; 2025 noein</b></h5>
+                      <h5 class="heading-uppercase font-family-roboto grey-font-color"><b>
+  &copy;
+    <span id="copyright">
+        <script>document.getElementById('copyright').appendChild(document.createTextNode(new Date().getFullYear()))</script>
+    </span>
+    noein
+  </b></h5>
                     </div>
                     <div class="col-12 col-md-4 text-center">
                         <ul class="list-horizontal-unstyled mb-0"></ul>
