--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
                     <h3 class="mb-3">If noein feels like the right space, let’s begin with a short conversation.</h3>
                   </br>
                     <a class="btn accent-btn mr-3 mb-2" href="lets-talk.html">Explore coaching</a>
-                    <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
+                    <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Send an email</a>
                 </div>
             </div>
         </section>
