--- a/index.html
+++ b/index.html
@@ -98,6 +98,18 @@
         <section class="section-spacer">
             <div class="container">
                 <div class="row col-spacing-30 align-items-start">
+                  <div class="col-lg-12">
+                      <div class="content-card h-100">
+                        <h2 class="mb-0 text-center">A space to think, to understand, to become.</h2>
+                      </div>
+                  </div>
+        </div>
+      </div>
+</section>
+
+        <section class="section-spacer">
+            <div class="container">
+                <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-6">
                         <div class="content-card h-100">
                             <h3 class="mb-3">A calm space for honest conversation.</h3>
@@ -123,18 +135,6 @@
 
         <section class="section-spacer">
             <div class="container">
-                <div class="row col-spacing-30 align-items-start">
-                  <div class="col-lg-12">
-                      <div class="content-card h-100">
-                        <h2 class="mb-0 text-center">A space to think, to understand, to become.</h2>
-                      </div>
-                  </div>
-        </div>
-      </div>
-</section>
-
-        <section class="section-spacer">
-            <div class="container">
                 <div class="row align-items-stretch col-spacing-30 equal-height-row">
                     <div class="col-lg-6 order-lg-2 mb-4 mb-lg-0">
                         <div class="content-card h-100">
@@ -144,7 +144,7 @@
                             <p class="mb-0"><strong>Transformative Coach and Architect</strong> – practical structure meets thoughtful exploration, to help you see what’s true and move forward with confidence.</p>
                         </div>
                     </div>
-                    <div class="col-lg-6 order-lg-1">
+                    <div class="col-lg-6 order-lg-1 mb-4 mb-lg-0">
                         <div class="content-card h-100">
                             <h4 class="mb-3">Who this space is for</h4>
                             <ul class="list-checks mb-0">
