Adjust spacing and fix Let's talk layout

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
             <div class="container">
                 <div class="row col-spacing-30 align-items-start">
                   <div class="col-lg-12">
-                      <div class="content-card h-100">
+                      <div class="content-card content-card--translucent h-100">
                         <h2 class="mb-0 text-center">A space to think, to understand, to become.</h2>
                       </div>
                   </div>
