--- a/lets-talk.html
+++ b/lets-talk.html
@@ -69,26 +69,28 @@
     <main class="flex-fill">
         <section class="section-spacer">
             <div class="container">
-                <div class="row align-items-stretch col-spacing-30 equal-height-row">
-                    <div class="col-lg-7 mb-4 mb-lg-0">
-                        <h1 class="mb-3">Let’s talk.</h1>
-                        <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online, creating a calm and supportive space for you to reflect and explore what matters most.</p>
-                        <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
-                        <p class="mb-4">Payment and scheduling details are shared once you’re ready to begin. I offer sessions mostly in the evenings and at weekends.</p>
-                        <div class="d-flex flex-wrap align-items-center">
-                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Email Alexandra</a>
+                <div class="content-card">
+                    <div class="row align-items-stretch col-spacing-30 equal-height-row">
+                        <div class="col-lg-7 mb-4 mb-lg-0">
+                            <h1 class="mb-3">Let’s talk.</h1>
+                            <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online, creating a calm and supportive space for you to reflect and explore what matters most.</p>
+                            <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
+                            <p class="mb-4">Payment and scheduling details are shared once you’re ready to begin. I offer sessions mostly in the evenings and at weekends.</p>
+                            <div class="d-flex flex-wrap align-items-center">
+                                <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
+                                <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Email Alexandra</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-lg-5">
-                        <div class="content-card h-100">
-                            <h5 class="mb-3">Work with me</h5>
-                            <ul class="list-checks mb-0">
-                                <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
-                                <li>One-to-one coaching — 60-minute sessions online.</li>
-                                <li>Availability focused on evenings and weekends.</li>
-                                <li>Payment and scheduling confirmed when you’re ready to begin.</li>
-                            </ul>
+                        <div class="col-lg-5">
+                            <div class="content-card h-100">
+                                <h5 class="mb-3">Work with me</h5>
+                                <ul class="list-checks mb-0">
+                                    <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
+                                    <li>One-to-one coaching — 60-minute sessions online.</li>
+                                    <li>Availability focused on evenings and weekends.</li>
+                                    <li>Payment and scheduling confirmed when you’re ready to begin.</li>
+                                </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
