--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -79,7 +79,7 @@
                             <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Say hello</a>
                         </div>
                     </div>
-                    <div class="col-lg-6 text-center" style="padding-top: 50px;">
+                    <div class="col-lg-6 text-center">
                         <div class="headshot-card">
                             <img src="assets/images/alex-avatar-photo-colour@2x.png" alt="Portrait of Alex" class="img-fluid rounded">
                         </div>
