--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                         <div class="row col-spacing-30 align-items-start">
                           <div class="col-lg-12">
                               <div class="content-card content-card--translucent h-100">
-                                <h2 class="mb-0 text-center">A space to think, to understand, to become.</h2>
+                                <h2 class="mb-0 text-center">A space to <i>think</i>, a space to <i>understand</i>, and a space to <i>become.</i></h2>
                               </div>
                           </div>
                 </div>
