--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -93,14 +93,14 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">Who I work with</h3>
+                            <h3 class="mb-3">Who I work with.</h3>
                             <p class="mb-3">I work with adults from a wide range of backgrounds — professionals, creatives, people in demanding roles, and those navigating personal transitions.</p>
                             <p class="mb-0">You don’t need a perfectly shaped goal to begin. Many clients arrive with a sense that something isn’t quite right, or that something needs to shift, even if it’s hard to put into words.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">What coaching can help with</h3>
+                            <h3 class="mb-3">What coaching can help with.</h3>
                             <p class="mb-3">Coaching can support you in many different areas of life and work. Some themes that often show up in sessions include:</p>
                             <ul class="list-checks mb-0">
                                 <li>Gaining clarity on your direction or next steps.</li>
@@ -122,7 +122,7 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">How our sessions work</h3>
+                            <h3 class="mb-3">How our sessions work.</h3>
                             <ul class="list-checks mb-4">
                                 <li>Format – One-to-one coaching.</li>
                                 <li>Session length – 60 minutes.</li>
@@ -135,7 +135,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">My philosophy</h3>
+                            <h3 class="mb-3">My philosophy.</h3>
                             <p class="mb-3">Life is often influenced by factors we don’t fully notice. In our busy, demanding, and sometimes stressful lives, it’s easy to lose sight of what truly matters and to find ourselves living in ways that don’t fully reflect our dreams or values.</p>
                             <p class="mb-0">Coaching helps us pause, notice the choices we’ve made, and understand the reasons behind them. It supports us to reconnect with our values and remember where we want our choices to take us, so we can live with greater intention, clarity, and alignment.</p>
                         </div>
@@ -149,14 +149,14 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">My coaching style</h3>
+                            <h3 class="mb-3">My coaching style.</h3>
                             <p class="mb-3">My approach is reflective, calm, and centred around awareness. I meet clients where they are, following their pace, their questions, and what naturally arises in the space we create together.</p>
                             <p class="mb-0">When we understand the thoughts, patterns, and assumptions shaping our lives, we begin to act with greater clarity and intention.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">My qualifications</h3>
+                            <h3 class="mb-3">My qualifications.</h3>
                             <ul class="list-checks mb-0">
                                 <li>Accredited Diploma in Transformative Coaching</li>
                                 <li>BA (Hons) Degree in Architecture (Part 1)</li>
@@ -172,16 +172,10 @@
         <section class="section-spacer">
             <div class="container">
                 <div class="row col-spacing-30 align-items-start">
-                    <div class="col-lg-6">
+
+                    <div class="col-lg-12">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">Client experiences</h3>
-                            <p class="mb-3">“Working with Alexandra has been a helpful experience. Her support and attentiveness have helped me gain new perspectives and make progress towards my goal.”</p>
-                            <p class="mb-3">“Working with Alexandra was a truly valuable experience. From the very beginning, she created a safe and comfortable space where I felt at ease sharing my thoughts and past experiences.”</p>
-                </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="content-card h-100">
-                            <h3 class="mb-3">Curious about working together?</h3>
+                            <h3 class="mb-3">Ready to begin?</h3>
                             <p class="mb-4">If you’re ready for a calm, thoughtful space to reconnect with yourself, I’d love to hear from you.</p>
 </br>
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
