--- a/index.html
+++ b/index.html
@@ -73,10 +73,7 @@
                         <p class="mb-3">At noein, you step into a quiet space of reflection — a place to slow down, explore your thoughts, and rediscover what feels true for you.</p>
                         <p class="mb-3">It’s a calm space for honest conversation, thoughtful insight, and gentle transformation. Coaching here isn’t about being given answers; it’s about reconnecting with yourself and uncovering what’s already within you.</p>
                         <p class="mb-4">This is coaching that begins with awareness, deepens into understanding, and moves naturally into meaningful change and action.</p>
-                        <div class="d-flex flex-wrap align-items-center">
-                            <a class="btn accent-btn mr-3 mb-2" href="get-to-know-me.html">Explore coaching</a>
-                            <a class="btn btn-outline-dark mb-2" href="lets-talk.html">Let’s talk</a>
-                        </div>
+
                     </div>
                     <div class="col-lg-5">
                         <div class="content-card h-100">
@@ -87,10 +84,28 @@
                                 <li>Clarity that turns into thoughtful action.</li>
                                 <li>A partner who meets you where you are.</li>
                             </ul>
+</br></br>
+                            <div class="d-flex flex-wrap align-items-center">
+                                <a class="btn accent-btn mr-3 mb-2" href="get-to-know-me.html">Explore coaching</a>
+                                <a class="btn btn-outline-dark mr-3 mb-2" href="lets-talk.html">Let’s talk</a>
+                            </div>
+
                         </div>
                     </div>
                 </div>
             </div>
+        </section>
+
+                <section class="section-spacer">
+                    <div class="container">
+                        <div class="row col-spacing-30 align-items-start">
+                          <div class="col-lg-12">
+                              <div class="content-card content-card--translucent h-100">
+                                <h1 class="mb-0 text-center">A space to <i>think.</i></h1>
+                              </div>
+                          </div>
+                </div>
+              </div>
         </section>
 
         <section class="section-spacer">
@@ -105,7 +120,7 @@
                     </div>
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h4 class="mb-3">How we work together</h4>
+                            <h3 class="mb-3">How we work, together.</h3>
                             <ul class="list-checks mb-4">
                                 <li>Begin with awareness, deepen into understanding, and move into meaningful change.</li>
                                 <li>Explore your thoughts, patterns, and assumptions at a pace that feels right for you.</li>
@@ -124,7 +139,7 @@
                         <div class="row col-spacing-30 align-items-start">
                           <div class="col-lg-12">
                               <div class="content-card content-card--translucent h-100">
-                                <h2 class="mb-0 text-center">A space to <i>think</i>, a space to <i>understand</i>, and a space to <i>become.</i></h2>
+                                <h1 class="mb-0 text-center">A space to <i>understand.</i></h1>
                               </div>
                           </div>
                 </div>
@@ -144,7 +159,7 @@
                     </div>
                     <div class="col-lg-6 order-lg-1 mb-4 mb-lg-0">
                         <div class="content-card h-100">
-                            <h4 class="mb-3">Who this space is for</h4>
+                            <h3 class="mb-3">Who this space is for.</h3>
                             <ul class="list-checks mb-0">
                                 <li>Sensing a pull toward something more aligned in life or work.</li>
                                 <li>Wanting more clarity about your direction or next steps.</li>
@@ -157,12 +172,24 @@
             </div>
         </section>
 
+                <section class="section-spacer">
+                    <div class="container">
+                        <div class="row col-spacing-30 align-items-start">
+                          <div class="col-lg-12">
+                              <div class="content-card content-card--translucent h-100">
+                                <h1 class="mb-0 text-center">A space to <i>become.</i></h1>
+                              </div>
+                          </div>
+                </div>
+              </div>
+        </section>
+
         <section class="section-spacer">
             <div class="container">
                 <div class="content-card">
                     <div class="row mb-4 align-items-center">
                         <div class="col-lg-8">
-                            <h3 class="mb-0">What people say</h3>
+                            <h3 class="mb-0">What people say.</h3>
                         </div>
                         <div class="col-lg-4 text-lg-right mt-3 mt-lg-0">
                             <a class="btn btn-outline-dark" href="lets-talk.html">Book a discovery call</a>
