--- a/lets-talk.html
+++ b/lets-talk.html
@@ -73,20 +73,22 @@
                     <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online, creating a calm and supportive space for you to reflect and explore what matters most.</p>
                     <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
                     <p class="mb-4">Payment and scheduling details are shared once you’re ready to begin. I offer sessions mostly in the evenings and at weekends.</p>
-                    <div class="d-flex flex-wrap align-items-center">
-                        <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                        <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Email Alexandra</a>
-                    </div>
                   </div>
                   <div class="col-lg-5">
                       <div class="content-card h-100">
-                          <h5 class="mb-3">Work with me</h5>
+                          <h3 class="mb-3">Work with me.</h3>
                           <ul class="list-checks mb-0">
                             <li>Free Discovery Call — 30 minutes, relaxed and no obligation.</li>
                             <li>One-to-one coaching — 60-minute sessions online.</li>
                             <li>Availability focused on evenings and weekends.</li>
                             <li>Payment and scheduling confirmed when you’re ready to begin.</li>
                           </ul>
+
+                        </br></br>
+                        <div class="d-flex flex-wrap align-items-center">
+                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book discovery call</a>
+                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Email Me</a>
+                        </div>
                       </div>
                   </div>
               </div>
@@ -98,14 +100,14 @@
                 <div class="row col-spacing-30 align-items-start">
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">How it feels to work together</h3>
+                            <h3 class="mb-3">How it feels to work together.</h3>
                             <p class="mb-3">Coaching here begins with awareness, deepens into understanding, and moves into meaningful change and action. It’s reflective, calm, and centred around your pace, your questions, and what naturally arises for you.</p>
                             <p class="mb-0">Together we’ll reconnect with your values, clarify your direction, and help you act with intention.</p>
                         </div>
                     </div>
                     <div class="col-lg-6">
                         <div class="content-card h-100">
-                            <h3 class="mb-3">Contact me</h3>
+                            <h3 class="mb-3">Get in touch.</h3>
                             <p class="mb-3">I’d love to hear from you. Whether you’re curious about coaching, have a question, or want to book an introductory call, please reach out.</p>
                             <p class="mb-4">Email: <a href="mailto:alex@noein.co.uk">alex@noein.co.uk</a><br>Sessions: Online via Microsoft Teams — mainly evenings &amp; weekends.<br>I work with clients worldwide online.</p>
                             <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Schedule on Calendly</a>
