--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -75,8 +75,8 @@
                         <p class="mb-3">I have created the space that I once needed myself; a calm place to think, reflect, and reconnect with what feels true.</p>
 
                           <div class="d-flex flex-wrap align-items-center" style="padding-top: 10px;">
-                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book a discovery call</a>
-                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Say hello</a>
+                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book Discovery Call</a>
+                            <a class="btn btn-outline-dark mb-2" href="mailto:alex@noein.co.uk">Say Hello</a>
                         </div>
                     </div>
                     <div class="col-lg-6 text-center">
