--- a/lets-talk.html
+++ b/lets-talk.html
@@ -69,11 +69,10 @@
           <div class="container">
               <div class="row align-items-center">
                   <div class="col-lg-7 mb-4 mb-lg-0">
-                    <h1 class="mb-3">Let’s talk.</h1>
+                    <h4 class="mb-3">Let’s talk.</h4>
                     <p class="mb-3">I offer one-to-one, 60-minute coaching sessions online, creating a calm and supportive space for you to reflect and explore what matters most.</p>
                     <p class="mb-3">If you’re curious about how coaching could support you, you’re invited to book a free 30-minute Discovery Call. It’s a relaxed conversation where we can get to know each other and see whether the approach feels right for you.</p>
-                    <p class="mb-4">Payment and scheduling details are shared once you’re ready to begin. I offer sessions mostly in the evenings and at weekends.</p>
-                  </div>
+                    </div>
                   <div class="col-lg-5">
                       <div class="content-card h-100">
                           <h3 class="mb-3">Work with me.</h3>
@@ -86,8 +85,8 @@
 
                         </br></br>
                         <div class="d-flex flex-wrap align-items-center">
-                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book discovery call</a>
-                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Email Me</a>
+                            <a class="btn accent-btn mr-3 mb-2" href="https://calendly.com/alexandraa-noein/30min">Book Discovery Call</a>
+                            <a class="btn btn-outline-dark mr-3 mb-2" href="mailto:alex@noein.co.uk">Say Hello</a>
                         </div>
                       </div>
                   </div>
