Improve spacing consistency and preloader message

--- a/get-to-know-me.html
+++ b/get-to-know-me.html
@@ -64,6 +64,8 @@
         </nav>
     </header>
 
+    <div class="navbar-placeholder"></div>
+
     <main class="flex-fill">
         <section class="section-spacer">
             <div class="container">
