--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
         </nav>
     </header>
 
+    <div class="navbar-placeholder"></div>
+
     <main class="flex-fill">
         <section class="section-spacer section-hero-intro">
             <div class="container">
