--- a/lets-talk.html
+++ b/lets-talk.html
@@ -64,8 +64,10 @@
         </nav>
     </header>
 
+    <div class="navbar-placeholder"></div>
+
     <main class="flex-fill">
-      <section class="section-spacer section-hero-intro">
+        <section class="section-spacer section-hero-intro">
           <div class="container">
               <div class="row align-items-center">
                   <div class="col-lg-7 mb-4 mb-lg-0">
